--- a/TodoList/delete/delete.html
+++ b/TodoList/delete/delete.html
@@ -6,6 +6,19 @@
   </head>
 
   <body>
+    <p>Todo List</p>
+
+    <div class="todo-input-grid">
+      <input placeholder="Todo Name" class="js-task-input task-input">
+      
+      <input type="date" class="js-due-date-input due-date-input">
+
+      <button class="add-todo-button js-add-todo-button">
+        Add
+      </button>
+    </div>
+
+    <div class="js-todo-list todo-grid"></div>
     <script src="scripts/delete.js"></script>
   </body>
 </html>
